# dyna-render

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/Models/: Plane.glb
Editor/: CMakeLists.txt
Editor/src/: App.cpp  EditorLayer.cpp  EditorLayer.h
GL-Core/: CMakeLists.txt
GL-Core/src/: GLCoreUtils.h
GL-Core/src/GLCore/Core/: Application.cpp  Application.h  Base.h  Core.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  PublicSingleton.h  Timestep.h  Window.h
GL-Core/src/GLCore/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
GL-Core/src/GLCore/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
GL-Core/src/GLCore/Mesh/: Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
GL-Core/src/GLCore/Rendering/: Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NewShader.cpp  NewShader.h  PostProcessing.h  RenderCommand.cpp  RenderPass.h  Renderer.h  Renderer3D.h  RenderingAPI.h  RenderingCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
GL-Core/src/GLCore/Rendering/Camera/: Camera.h  EditorCamera.cpp  EditorCamera.h  OrbitCamera.cpp  OrbitCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  SceneCamera.cpp  SceneCamera.h
GL-Core/src/GLCore/Resource/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h
GL-Core/src/GLCore/Utils/: OpenGLDebug.cpp  Time.cpp  Time.h
GL-Core/src/Platform/OpenGL/: NativeOpenGLShader.cpp  NativeOpenGLShader.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderingAPI.cpp  OpenGLRenderingAPI.h  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexBuffr.cpp
GL-Core/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
HW1/: CMakeLists.txt
HW1/src/: SimpleApp.cpp  SimpleLayer.h
HW2/assets/shaders/: TeapotFS.hlsl  TeapotVS.hlsl  teapot.frag.glsl  teapot.vert.glsl
HW2/src/: SimpleLayer.cpp  TeapotApp.cpp  TeapotLayer.cpp  TeapotLayer.h
HW3/: CMakeLists.txt
HW3/assets/shaders/: Blinn-Phong.frag.glsl  Blinn-Phong.vert.glsl  LightCube.frag.glsl
HW3/src/: BlinnPhongApp.cpp  BlinnPhongLayer.cpp  BlinnPhongLayer.h
HW4/: CMakeLists.txt
HW4/assets/shaders/: Blinn-Phong.frag.glsl  Blinn-Phong.vert.glsl
HW4/src/: TextureApp.cpp  TextureLayer.cpp  TextureLayer.h
HW5/: CMakeLists.txt
HW5/assets/shaders/: Plane.vert.glsl
HW5/src/: FrameBufferApp.cpp  FrameBufferLayer.cpp  FrameBufferLayer.h
HW6/: CMakeLists.txt
HW6/assets/shaders/: Plane.frag.glsl  Plane.vert.glsl  SkyBox.frag.glsl  SkyBox.vert.glsl
HW6/assets/shaders/IBL/: environment-mapping.frag.glsl  environment-mapping.vert.glsl  irradiance.vert.glsl
HW6/src/: IBLApp.cpp  IBLLayer.cpp  IBLLayer.h
Shaders/: BasePBR.frag.glsl  BasePBR.vert.glsl  BasicShader.glsl  BlinnEnvironment.frag  BlinnEnvironment.vert  Light.glsl  LightCube.frag.glsl  LightCube.vert.glsl  MirrorPlane.glsl  NormalMapping.glsl  Plane.frag.glsl  Plane.vert.glsl  SkyBox.glsl  SkyBox.slang
Shaders/IBL/: brdf.fragment.glsl  environment-mapping.glsl  environment-mapping.vert.glsl  irradiance.frag.glsl  prefilter.frag.glsl  prefilter.vert.glsl
Shaders/NormalMapping/: Line.glsl  NormalMapping.glsl
Shaders/Shadow/: DebugPlane.glsl  ShadowDepth.glsl  ShadowMapping.glsl
